--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,44 +1,37 @@
 
-<div class="container-fluid">
+<div class="container">
 	<div class="row small-height">
 
-		<div class="col-md">
+		<div class="col-6">
 
-	<h2>Your Teams: </h2>
-<div class="list-group">
-	<% current_user.teams.each do |team| %>
-		<%= link_to(team.name, team_path(team), class: "list-group-item list-group-item-action team", style:"color: blue") %>
-	<% end %>
-</div>
+			<h4>Your Teams </h4>
+			<div class="list-group">
+				<% current_user.teams.each do |team| %>
+				<%= link_to(team.name, team_path(team), class: "list-group-item list-group-item-action team", style:"color: blue") %>
+				<% end %>
+			</div>
 
-</div>
+		</div>
 
-	<div class="col-md">
-		<h2>Operational Teams</h2>
+		<div class="col-6">
 
-<div class="list-group">
+			<h4>Operational Teams</h4>
+			<!-- <div class="card col-sm-4" style="display: flex; justify-content: left;"> -->
+			<!-- <div class="card-block "> -->
+			<div class="list-group">
+				<% @operational_teams.each do |team| %>
+				<div class="list-group-item team"> <%= team.name %> </div>
+				<% end %>
+			</div>
+			<!-- </div> -->
 
-</div>
+			<h4>Regional Teams</h4>
+			<div class="list-group">
+				<% @regional_teams.each do |team| %>
+				<div class="list-group-item team"> <%= team.name %> </div>
+				<% end %>
+			</div>
 
-	<div class="card col-sm-4" style="display: flex; justify-content: left;">
-		<h3>Operational Teams</h3>
-	<div class="card-block ">
-		<% @operational_teams.each do |team| %>
-			<div class="list-group-item team"> <%= team.name %> </div>
-		<% end %>
-	</div>
-
-</div>
-
-	<div class="col-md">
-		<h2>Regional Teams</h2>
-   <div class="list-group">
-		<% @regional_teams.each do |team| %>
-			<div class="list-group-item team"> <%= team.name %> </div>
-		<% end %>
-	</div>
-	</div>
-	</div>
+		</div>
 	</div>
 </div>
-
