footer manual override

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -127,7 +127,7 @@
        -moz-transition: .5s;
        -webkit-transition: .5s;
        transition: .5s;
-       background-color: #888888;
+       background-color: #293d52;
    }
 
 
@@ -142,7 +142,7 @@
        -moz-transition: .5s;
        -webkit-transition: .5s;
        transition: .5s;
-       background-color: #888888;
+       background-color: #293d52;
    }
 
    .fa-youtube:hover {
@@ -157,7 +157,7 @@
     -moz-transition: .5s;
     -webkit-transition: .5s;
     transition: .5s;
-    background-color: #888888;
+    background-color: #293d52;
 }
 
 .fa-google-plus:hover {
@@ -171,7 +171,7 @@
       -moz-transition: .5s;
       -webkit-transition: .5s;
       transition: .5s;
-      background-color: #888888;
+      background-color: #293d52;
   }
 
   .fa-linkedin:hover {
@@ -302,7 +302,7 @@ h1.page-head {
         -moz-transition: .5s;
         -webkit-transition: .5s;
         transition: .5s;
-        background-color: #888888;
+        background-color: #293d52;
     }
 
     .fa-facebook:hover {
@@ -316,7 +316,7 @@ h1.page-head {
         -moz-transition: .5s;
         -webkit-transition: .5s;
         transition: .5s;
-        background-color: #888888;
+        background-color: #293d52;
     }
 
     .fa-twitter:hover {
@@ -330,7 +330,7 @@ h1.page-head {
         -moz-transition: .5s;
         -webkit-transition: .5s;
         transition: .5s;
-        background-color: #888888;
+        background-color: #293d52;
     }
 
     .fa-rss:hover {
@@ -344,7 +344,7 @@ h1.page-head {
         -moz-transition: .5s;
         -webkit-transition: .5s;
         transition: .5s;
-        background-color: #888888;
+        background-color: #293d52;
     }
 
     .fa-youtube:hover {
@@ -358,7 +358,7 @@ h1.page-head {
         -moz-transition: .5s;
         -webkit-transition: .5s;
         transition: .5s;
-        background-color: #888888;
+        background-color: #293d52;
     }
 
     .fa-linkedin:hover {
@@ -372,7 +372,7 @@ h1.page-head {
         -moz-transition: .5s;
         -webkit-transition: .5s;
         transition: .5s;
-        background-color: #888888;
+        background-color: #293d52;
     }
 
     .fa-google-plus:hover {
