--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
 <% end %>
     <div class="footer-social-icons">
     <p>©Force of Nature Alliance 2017</p>
-        <ul class="social-icons">
+        <ul class="social-icons mb-0">
             <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
             <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
             <li><a href="" class="social-icon"> <i class="fa fa-rss"></i></a></li>
