a little more css fixes

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container-fluid d-flex justify-content-center ">
+<div class="container-fluid d-flex justify-content-center" style="min-height:690px;">
 	<div class="col-lg-4 small-height">
 		<h1 class="page-head"> Sign-up </h1>
 		<%= simple_form_for(@user) do |f| %>
