--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -4,5 +4,7 @@
 <%= f.input :name, label: 'Team Name'%>
 <%= f.label :team_category_id %>
 <%= f.select :team_category_id, @team_categories.map { |category| [category.name, category.id] } %>
+<%= f.label :Member %>
+<%= f.association :members, collection: @users.map, :include_blank => true, input_html:  { class: 'chosen-select'} %>
 <%= f.submit %>
  <% end %>
