--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -5,6 +5,7 @@
 <%= f.label :team_category_id %>
 <%= f.select :team_category_id, @team_categories.map { |category| [category.name, category.id] } %>
 <%= f.label :Member %>
-<%= f.association :members, collection: @users.map, :include_blank => true, input_html:  { class: 'chosen-select'} %>
+<%= f.association :members, collection: @users, :include_blank => true, input_html:  { class: 'chosen-select'} ,  :label_method => lambda { |user| "#{user.first_name} #{user.last_name}"  }%>
+
 <%= f.submit %>
  <% end %>
