--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,8 @@
 
-<div class="container cal-con">
+<div class="container-fluid cal-con">
+	<div class="row">
+		<div class="col-lg">
 	<h1 class="page-head">All Events</h1>
-		<%= link_to 'Add Event', new_event_path %>
     <div id="calendar"></div>
 
     <div class="modal fade" id="eventShow" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
@@ -34,5 +35,17 @@
             </div>
         </div>
     </div>
+	</div>
 
+
+<div class="col-lg-3">
+	<div class="list-group" style="margin-top:5rem">
+	<% @events.each do |event| %>
+	<% @anevent = event.name.to_s + " - " + event.date.to_s %>
+	 <div class="list-group-item"> <%= link_to @anevent, eventshow_path(event) %> </div>
+	<% end %>
+	 <div class="list-group-item">		<%= link_to 'Add Event', new_event_path, class:"btn btn-primary" %> </div>
+</div>
+</div>
+</div>
 </div>
