--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -233,7 +233,7 @@ h1.page-head {
 
 #welcome2 {
   background-image: image-url('forest.jpg');
-  background-size: cover;
+  background-attachment: fixed;
 }
 
 #fixed {
