--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 
-<div class="container-fluid d-flex justify-content-center" style="min-height:690px;">
+<div class="container-fluid d-flex justify-content-center" style="min-height:50vh;">
 	<div class="col-lg-4 small-height">
-		<h1 class="page-head"> Sign-up </h1>
+		<h2 class="page-head"> Sign-up </h2>
 		<%= simple_form_for(@user) do |f| %>
 		        <%= f.input :first_name%>
 		        <%= f.input :last_name%>
