--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
     <div class="footer-social-icons">
     <p>©Force of Nature Alliance 2017</p>
         <ul class="social-icons mb-0">
-            <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://www.facebook.com/readytoflip/" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
             <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
             <li><a href="" class="social-icon"> <i class="fa fa-rss"></i></a></li>
             <li><a href="" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
