--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <body>
 
   <% if controller.controller_name == "welcome" && controller.action_name == "index" %>
-  <nav class="navbar navbar-expand-md">
+  <nav class="navbar navbar-expand-md" style="background: linear-gradient(black, transparent);">
     <% else %>
     <nav class="navbar navbar-expand-md" style="background-color:#293d52" >
       <% end %>
