--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -10,6 +10,8 @@
 	<% current_user.teams.each do |team| %>
 		<%= link_to(team.name, team_path(team), class: "list-group-item list-group-item-action team", style:"color: blue") %>
 	<% end %>
+
+	<%= link_to 'Add a team', new_team_path %>
 </div>
 
 </div>
