--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,3 +1,5 @@
-<h1>New Team</h1>
+<div class="container" style="min-height: 60vh">
+	<h1>New Team</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
