Small changes to permissions and links.

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -14,9 +14,11 @@
 
 		<p> <%= @event.additional_info %> </p>
 		<p> <%= @event.attachment_url %></p>
+	<% if current_user.user_category.name === 'Admin' || current_user.user_category.name === 'Team Lead' %>
 		<%= link_to 'Edit', edit_event_path(@event) %>
 		<%= link_to('Delete',
 			event_path(@event),data: {confirm: 'Are you sure?'},method: :delete) %>
+	<% end %>
 
 
 		<%= link_to 'Sign Up for this Event!', event_neweventsignup_path(@event), class: "btn btn-primary" %>
