--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -437,3 +437,13 @@ table {
 ///////////////////// CSS for Forms
 
 ////////////
+
+/// Team Index Page
+
+.add-team-button {
+  margin-top: 20px;
+  border: 1px solid black;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+}
