--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,5 +1,8 @@
 <div class="container" style="min-height: 60vh">
-	<h1>New Team</h1>
-
-	<%= render 'form' %>
+<div class="row" style="justify-content: center;">
+	<div class="col-md-6">
+		<h1>New Team</h1>
+		<%= render 'form' %>
+	</div>
+</div>
 </div>
