--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -14,10 +14,12 @@
 
 		<p> <%= @event.additional_info %> </p>
 		<p> <%= @event.attachment_url %></p>
-	<% if current_user.user_category.name === 'Admin' || current_user.user_category.name === 'Team Lead' %>
-		<%= link_to 'Edit', edit_event_path(@event) %>
-		<%= link_to('Delete',
-			event_path(@event),data: {confirm: 'Are you sure?'},method: :delete) %>
+	<% if current_user %>
+		<% if current_user.user_category.name === 'Admin' || current_user.user_category.name === 'Team Lead' %>
+			<%= link_to 'Edit', edit_event_path(@event) %>
+			<%= link_to('Delete',
+				event_path(@event),data: {confirm: 'Are you sure?'},method: :delete) %>
+		<% end %>
 	<% end %>
 
 
