css and bootstrap polish

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -178,6 +178,11 @@
       background-color: #0073a4;
   }
 
+.linksstyle{
+    -moz-box-shadow: 5px 5px rgb(0,0,0);
+    -webkit-box-shadow: 5px 5px rgb(0,0,0);
+    box-shadow: 5px 5px rgb(0,0,0);
+}
 
 //page styling
 .container, .container-fluid {
