--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -4,26 +4,33 @@
             <div class='card col-5 p-0'>
             <div class='card-header'><strong>Team Leads: </strong><%= @stats[:teamleads] %></div>
                     <% @lead_users.each do |volunteer| %>
-                        <div class="mt-2 mb-2 border">
+                        <div class="mt-2 mb-2">
                         <strong class="pl-2">Full name:</strong> <%= volunteer.full_name %>
                         <br>
                         <strong class="pl-2">Email:</strong> <%= volunteer.email %>
                         </div>
+                        <%= form_tag("upcat/#{volunteer.id}", method: :patch) do %> 
+                        <div class="field pb-1 pl-2" style="border-bottom: 1px solid grey">
+                           <%= label(:user_category, "user_category") %>
+                           <%= select_tag "user_category", "<option>General Volunteer</option><option>Team Lead</option>".html_safe, class:"btn btn-success dropdown-toggle" %>
+                        <%= submit_tag "Submit", class:"btn btn-primary" %>
+                        <% end %>
+                       </div>
                     <% end %>
             </div>
             <div class='card col-5 p-0'>
             <div class='card-header'><strong>General Volunteers: </strong><%= @stats[:genvol] %></div>
                     <% @gen_vol_users.each do |volunteer| %>
-                        <div class="mt-2 mb-2 border">
-                        <strong>Full name:</strong> <%= volunteer.full_name %>
+                        <div class="mt-2 mb-2">
+                        <strong class="pl-2">Full name:</strong> <%= volunteer.full_name %>
                         <br>
-                        <strong>Email:</strong> <%= volunteer.email %>
+                        <strong class="pl-2">Email:</strong> <%= volunteer.email %>
                         </div>
                         <%= form_tag("upcat/#{volunteer.id}", method: :patch) do %> 
-                        <div class=“field”>
+                        <div class="field pb-1 pl-2" style="border-bottom: 1px solid grey">
                            <%= label(:user_category, "user_category") %>
-                           <%= select_tag "user_category", "<option>Guest</option><option>Team Lead</option>".html_safe %>
-                        <%= submit_tag "Submit" %>
+                           <%= select_tag "user_category", "<option>Guest</option><option>Team Lead</option>".html_safe, class:"btn btn-success dropdown-toggle" %>
+                        <%= submit_tag "Submit", class:"btn btn-primary" %>
                         <% end %>
                        </div>
                     <% end %>
@@ -31,16 +38,16 @@
             <div class='card col-11 p-0 mt-2'>
             <div class='card-header'><strong> Guests: </strong><%= @stats[:guests] %></div>
                     <% @guest_users.each do |volunteer| %>
-                        <div class="mt-2 mb-2 border">
-                        <strong>Full name:</strong> <%= volunteer.full_name %>
+                        <div class="mt-2 mb-2">
+                        <strong class="pl-2">Full name:</strong> <%= volunteer.full_name %>
                         <br>
-                        <strong>Email:</strong> <%= volunteer.email %>
+                        <strong class="pl-2">Email:</strong> <%= volunteer.email %>
                         </div>
                         <%= form_tag("upcat/#{volunteer.id}", method: :patch) do %>
-                       <div class=“field”>
+                       <div class="field pb-1 pl-2" style="border-bottom:1px solid grey">
                            <%= label(:user_category, "user_category") %>
-                           <%= select_tag "user_category", "<option>General Volunteer</option><option>Team Lead</option>".html_safe %>
-                           <%= submit_tag "Submit" %>
+                           <%= select_tag "user_category", "<option>General Volunteer</option><option>Team Lead</option>".html_safe, class:"btn btn-success dropdown-toggle" %>
+                           <%= submit_tag "Submit", class:"btn btn-primary"%>
                        </div>
                         <% end %>
                     <% end %>
@@ -48,7 +55,7 @@
         </div>
     </div>
     <h3 class="mt-3">Current Events</h3>
-    <table class='table table-bordered'>
+    <table class='table table-bordered table-striped'>
         <thead class='thead-inverse'>
             <tr>
                 <th>Event Name</th>
@@ -78,10 +85,10 @@
         <% @teams.each do |team| %>
             <% if team.members.count > 0 %>
             <div class="card col-4 p-0 mt-2">
-                <div class="card-header"><%= team.name %></div>
+                <div class="card-header"><strong><%= team.name %></strong></div>
                 <div class="list-group">
                 <% team.members.each do |member| %>
-                   <div class="list-group-item list-group-item-action"> <%= member.full_name %>
+                   <div class="list-group-item list-group-item-action border-0 linksstyle"> <%= member.full_name %>
                    <% user_team_record = UserTeam.where(user: member.id).where(team: team.id).first%>
                    <%= link_to fa_icon('times 2x'), userteam_url(user_team_record), method: :delete, data: {confirm: 'Are you sure?'}, class: "pull-right" %>
                    </div>
