--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <div class="panel" id="fixed">
-  <p class="panel-text"> Welcome to Force of Nature.  From stopping the Site C dam and raising thousands of dollars for First Nation's legal challenges, to mobilizing tens of thousands of voters in the last three elections and promoting rooftop solar energy in Metro Vancouver municipalities, our community organizing projects empower local leaders, constituents and volunteers to to accelerate the Lower Mainland's transition to a just and democratic low-carbon future. </p>
+  <p class="panel-text"> Welcome to Force of Nature.  From stopping the Site C dam and raising thousands of dollars for First Nation's legal challenges, to mobilizing tens of thousands of voters in the last three elections and promoting rooftop solar energy in Metro Vancouver municipalities, our community organizing projects empower local leaders, constituents and volunteers to accelerate the Lower Mainland's transition to a just and democratic low-carbon future. </p>
 </div>
 
 <div class="panel" id="welcome">
