--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,8 @@
 
         <ul class="navbar-nav ml-auto">
           <% if current_user %>
+            <span class="nav-link" style="color:white;"><%= fa_icon('slack')%></span>
+            <%= link_to 'Slack', 'https://slack.com/', class: 'nav-link', style: 'color: white' %>
             <%= link_to 'Create an Event', new_event_path, class: 'nav-link', style: 'color: white' %>
             <% if current_user.user_category.name === 'Admin' %>
               <%= link_to 'Admin Dashboard', admin_dashboard_index_path, class: 'nav-link', style: 'color: white' %>
