--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -4,7 +4,11 @@
 <div class="row">
   <div class="col-4">
     <%= f.label :date %><p>
-      <%= f.text_field :date, "data-provide" => 'datepicker', "data-date-format"=>"dd-M-yyyy "%>
+      <!-- Goto date.js for changing defaults  -->
+      <%= f.text_field :date, "data-provide" => 'datepicker'%>
+      <script>
+
+</script>
     </div>
     <div class="col-4">
       <%= f.input :start_time, label: 'Start Time:'%>
