Fixed footer. Added margin for content. Adjusting some styling. Get rid of previous footer fix.

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,8 @@
-<div class="container-fluid d-flex justify-content-center">
+<div class="container-fluid">
+	<div class="row d-flex justify-content-center">
 	<div class="col-lg-8">
 	<h4 class="page-head"> New Event</h4>
 	<%= render 'form'%>
+</div>
 </div>
 </div>
