--- a/app/views/eventsignup/new.html.erb
+++ b/app/views/eventsignup/new.html.erb
@@ -1,5 +1,5 @@
-<div class="row d-flex justify-content-center" style="min-height:60vh;">
-  <div class="col-md-5 small-height">
+<div class="row d-flex justify-content-center align-items-center">
+  <div class="col-md-5">
       <h2>Sign-up for an event!</h2>
 
         <%= form_tag("newsignup", method: "post", class:"form") do %>
