--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -6,5 +6,5 @@
 <%= f.select :team_category_id, @team_categories.map { |category| [category.name, category.id] } %>
 <%= f.association :members, collection: @users, :include_blank => true, input_html:  { class: 'chosen-select'} ,  :label_method => lambda { |user| "#{user.first_name} #{user.last_name}"  }%>
 
-<%= f.submit %>
+<%= f.submit "Create New Team", class:"btn btn-primary" %>
  <% end %>
