--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container" style="min-height:60vh">
+<div class="container">
 	<!-- <p>dashboard/teams</p> -->
 	<h4><%= @team.name %></h4>
 	<h5><%= @team.team_category.name %> team</h5>
