--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,29 +30,41 @@
   border-color: #293d52;
 }
 
+.row {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
 // footer styling
+
+
+html { height: 100%; }
+body {
+    min-height:100%;
+    position:relative;
+    padding-bottom: 130px;
+    margin:0;
+}
+.footer {
+    position: absolute;
+    left: 0 ; right: 0; bottom: 0;
+    height:130px;
+    background-color: #293d52;
+    color: white;
+    padding-top:5px;;
+
+}
+
 .footer-social-icons {
       width: 350px;
       display: block;
       margin: 0 auto;
   }
 
-  .footer {
-      position: relative;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      padding: .5rem;
-      margin-top: 50px;
-      padding-top: 12px;
-      padding-bottom: 0;
-      background-color: #293d52;
-      text-align: center;
-      color: #fff;
-      height: 120px;
-      clear:both;
+  .footer-social-icons p {
+    margin-top: 10px;
   }
+
 
   .footer_up {
       position: relative;
@@ -267,7 +279,7 @@ h1.page-head {
   margin-top: 1rem;
 }
 .details p {
-  line-height: 0.7rem;
+  line-height: 1.2em;
 }
 
 
