--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container pt-3">
-    <div>
+    <div class="row">
         <div class="card-block row d-flex justify-content-around">
             <div class='card col-5 p-0'>
             <div class='card-header'><strong>Team Leads: </strong><%= @stats[:teamleads] %></div>
@@ -9,7 +9,7 @@
                         <br>
                         <strong class="pl-2">Email:</strong> <%= volunteer.email %>
                         </div>
-                        <%= form_tag("upcat/#{volunteer.id}", method: :patch) do %> 
+                        <%= form_tag("upcat/#{volunteer.id}", method: :patch) do %>
                         <div class="field pb-1 pl-2" style="border-bottom: 1px solid grey">
                            <%= label(:user_category, "user_category") %>
                            <%= select_tag "user_category", "<option>General Volunteer</option><option>Team Lead</option>".html_safe, class:"btn btn-success dropdown-toggle" %>
@@ -26,7 +26,7 @@
                         <br>
                         <strong class="pl-2">Email:</strong> <%= volunteer.email %>
                         </div>
-                        <%= form_tag("upcat/#{volunteer.id}", method: :patch) do %> 
+                        <%= form_tag("upcat/#{volunteer.id}", method: :patch) do %>
                         <div class="field pb-1 pl-2" style="border-bottom: 1px solid grey">
                            <%= label(:user_category, "user_category") %>
                            <%= select_tag "user_category", "<option>Guest</option><option>Team Lead</option>".html_safe, class:"btn btn-success dropdown-toggle" %>
@@ -81,6 +81,7 @@
         </tbody>
     </table>
     <div>
+      <h3 class="mt-3">Teams</h3>
         <div class="card-block row">
         <% @teams.each do |team| %>
             <% if team.members.count > 0 %>
