--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,20 @@
 
     <%= yield %>
 
-    <%= render 'layouts/footer' %>
+  <div class="footer">
+    <div class="footer-social-icons">
+    <p>©Force of Nature Alliance 2017</p>
+        <ul class="social-icons mb-0">
+            <li><a href="https://www.facebook.com/readytoflip/" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+            <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+            <li><a href="" class="social-icon"> <i class="fa fa-rss"></i></a></li>
+            <li><a href="" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
+            <li><a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+            <li><a href="" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
+        </ul>
+    </div>
+  </div>
+
 
   </body>
   </html>
