--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container">
-	<div class="row small-height">
+	<div class="row">
 
 
 		<div class="col-md">
@@ -37,4 +37,3 @@
 	</div>
 	</div>
 	</div>
-
