--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 
-<div class="container-fluid d-flex justify-content-center">
-	<div class="row">
+<div class="container-fluid">
+	<div class="row d-flex justify-content-center">
 	<div class="col-lg-4">
 		<h2 class="page-head"> Sign-up </h2>
 		<%= simple_form_for(@user) do |f| %>
