--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -82,10 +82,10 @@
     </table>
     <div>
       <h3 class="mt-3">Teams</h3>
-        <div class="card-block row">
+        <div class="card-block row d-flex justify-content-between">
         <% @teams.each do |team| %>
             <% if team.members.count > 0 %>
-            <div class="card col-4 p-0 mt-2">
+            <div class="card col-md-4">
                 <div class="card-header"><strong><%= team.name %></strong></div>
                 <div class="list-group">
                 <% team.members.each do |member| %>
