--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,7 +1,17 @@
-<div class="container pt-3">
-    <div class="row">
-        <div class="card-block row d-flex justify-content-around">
-            <div class='card col-lg-6 col-sm-12 col-md-6 p-0'>
+<div class="container">
+  <div class="row justify-content-center">
+<%= link_to "Manage Users", admin_dashboard_index_path(anchor: 'Users'), class: "btn btn-primary", style: "margin:12px"%>
+<%= link_to "Manage Events", admin_dashboard_index_path(anchor: 'events'), class: "btn btn-primary",style: "margin:12px" %>
+<%= link_to "Manage Teams", admin_dashboard_index_path(anchor: 'teams'), class: "btn btn-primary", style: "margin:12px" %>
+
+
+  </div>
+ <div class="row">
+   <h3 id="users">Users</h3>
+ </div>
+
+    <div class="row d-flex justify-content-between">
+            <div class='card col-md-4' style="border:0">
             <div class='card-header'><strong>Team Leads: </strong><%= @stats[:teamleads] %></div>
                     <% @lead_users.each do |volunteer| %>
                         <div class="mt-2 mb-2">
@@ -18,7 +28,7 @@
                        </div>
                     <% end %>
             </div>
-            <div class='card col-lg-6 col-sm-12 col-md-6 p-0'>
+            <div class='col-md-4' style="border:0">
             <div class='card-header'><strong>General Volunteers: </strong><%= @stats[:genvol] %></div>
                     <% @gen_vol_users.each do |volunteer| %>
                         <div class="mt-2 mb-2">
@@ -35,7 +45,7 @@
                        </div>
                     <% end %>
             </div>
-            <div class='card col-12 col-md-12 col-sm-12 p-0 mt-2'>
+            <div class='card col-md-4' style="border:0">
             <div class='card-header'><strong> Guests: </strong><%= @stats[:guests] %></div>
                     <% @guest_users.each do |volunteer| %>
                         <div class="mt-2 mb-2">
@@ -53,8 +63,7 @@
                     <% end %>
             </div>
         </div>
-    </div>
-    <h3 class="mt-3">Current Events</h3>
+    <h3 class="mt-3" id="events">Current Events</h3>
     <table class='table table-bordered table-striped'>
         <thead class='thead-inverse'>
             <tr>
@@ -81,11 +90,11 @@
         </tbody>
     </table>
     <div>
-      <h3 class="mt-3">Teams</h3>
-        <div class="card-block row d-flex justify-content-between">
+      <h3 class="mt-3" id="teams">Teams</h3>
+        <div class="card-block row d-flex justify-content-between" style="background-col:lightgrey">
         <% @teams.each do |team| %>
             <% if team.members.count > 0 %>
-            <div class="card col-md-4">
+            <div class="card col-md-4" style="border:0">
                 <div class="card-header"><strong><%= team.name %></strong></div>
                 <div class="list-group">
                 <% team.members.each do |member| %>
