--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
             <% end %>
             <% if current_user.user_category.name === 'Team Lead' || current_user.user_category.name === 'Admin' %>
             <%= link_to 'Create an Event', new_event_path, class: 'nav-link', style: 'color: white' %>
-              <div style="color:white">&nbsp;|&nbsp;</div>
+              <h3><div style="color:white">&nbsp;|&nbsp;</div></h3>
               <%= link_to 'Your Teams', teams_path, class:"nav-link",style:"color:white" %>
               <%= link_to "Settings", edit_user_path(current_user), class: 'nav-link', style: 'color: white' %>
             <% elsif current_user.user_category.name === 'General Volunteer' %>
