Fixed AM PM and Current Date

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -11,10 +11,10 @@
 </script>
     </div>
     <div class="col-4">
-      <%= f.input :start_time, label: 'Start Time:'%>
+      <%= f.input :start_time, label: 'Start Time:', ampm: true%>
     </div>
     <div class="col-4">
-      <%= f.input :end_time, label: 'End Time'%>
+      <%= f.input :end_time, label: 'End Time',ampm: true%>
     </div>
   </div>
   <%= f.input :location, label: 'Location'%>
