--- a/app/views/eventsignup/new.html.erb
+++ b/app/views/eventsignup/new.html.erb
@@ -1,13 +1,31 @@
 <div class="row d-flex justify-content-center align-items-center">
   <div class="col-md-5">
-      <h2>Sign-up for an event!</h2>
+      <h2>Sign-up for this event!</h2>
 
         <%= form_tag("newsignup", method: "post", class:"form") do %>
             <div class="form-group">
+                <%= label(:first_name, "First Name", class:'form-label') %>
+                <%= text_field(:first_name, "first name", class: "form-control") %>
+                <%= label(:last_name, "Last Name", class:'form-label') %>
+                <%= text_field(:last_name, "last name", class: "form-control") %>
                 <%= label(:email, "Email", class:'form-label') %>
                 <%= email_field(:email, "email", class: "form-control") %>
+                <%= label(:phone_number, "Phone Number", class:'form-label') %>
+                <%= text_field(:phone_number, "phone number", class: "form-control") %>
+                <%= label(:additional_info, "Anything else we should know?", class:'form-label')%>
+                <%= text_field(:additional_info, "anything else we should know", class: "form-control") %>
+                <%= radio_button_tag(:previous_volunteer, true, class: "form-control") %>
+                <%= label_tag(:previous_volunteer_true, "I have volunteered with Force of Nature before", class:'form-label') %>
+                <%= radio_button_tag(:previous_volunteer, false, class: "form-control") %>
+                <%= label_tag(:previous_volunteer_false, "I am a new volunteer", class:'form-label') %>
             </div>
             <%= submit_tag "Sign up!", class: "btn btn-success pull-right"%>
         <% end %>
   </div>
  </div>
+
+
+<%#= radio_button_tag(:age, "child") %>
+<%#= label_tag(:age_child, "I am younger than 21") %>
+<%#= radio_button_tag(:age, "adult") %>
+<%#= label_tag(:age_adult, "I'm over 21") %>
