--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,8 @@
             <%= link_to 'Slack', 'https://slack.com/', class: 'nav-link', style: 'color: white' %>
             <% if current_user.user_category.name === 'Admin' %>
               <%= link_to 'Admin Dashboard', admin_dashboard_index_path, class: 'nav-link', style: 'color: white' %>
+              <% else %>
+                <%= link_to 'User Dashboard', user_dashboard_index_path, class: 'nav-link', style: 'color: white' %>
             <% end %>
             <% if current_user.first_name %>
             <li class="nav-item nav-link" style="color:white"> Welcome, <%= current_user.full_name %>  </li>
@@ -79,7 +81,7 @@
 
   <div class="footer">
     <div class="footer-social-icons">
-    <p>©Force of Nature Alliance 2017</p>
+    <p style="text-align:center">©Force of Nature Alliance 2017</p>
         <ul class="social-icons mb-0">
             <li><a href="https://www.facebook.com/readytoflip/" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
             <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
