--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -16,11 +16,11 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p id="eventDescription"></p>
+                    <!-- <p id="additionalInfo"></p> -->
                     <p id="starttime"></p>
                     <p id="endtime"></p>
                     <p id="location"></p>
-                    <p id='message'></p>
+                    <p id="message"></p>
                     <%#= form_tag("newsignup", :id => 'eventsignupform', method: "post", class: "form-inline d-flex justify-content-center") do %>
                        <!--  <div class="field d-flex">
                             <%= label(:email, "E-mail:", placeholder: 'user@domain.com', class:"mr-2") %>
@@ -32,9 +32,8 @@
 
                         <!-- ********************************************************* -->
                         <!-- figure out how to get Event ID here to link to the sign up page -->
-                        <%= link_to 'Sign Up for this Event!', event_neweventsignup_path(@event), class: "btn btn-success" %>
-                        <!-- ****************************************************** -->
-						<button id='moredetails' type="button" class="btn btn-secondary">View More Details</button>
+                        <%#= link_to 'View More Details to Sign Up', event_path(@event), class: 'btn btn-success' %>
+						<button id='moredetails' type="button" class="btn btn-success">View More Details to Sign Up</button>
 						<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
 					</div>
                 </div>
